# cos

./: .typos.toml  Cargo.toml  LICENSE-APACHE  README.md  README_RU.md  Ravedude.toml  TODO.md
.cargo/: config.toml
cos/: Cargo.toml
cos-num/: Cargo.toml
cos-num/src/: lib.rs
cos/.cargo/: config.toml
cos/src/: config.rs  lib.rs  log.rs  main.rs
src/: config.rs  lib.rs  log.rs  main.rs  num.rs
